[package]
name = "hackerrank-random-challange"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "time"
path = "src/time.rs"

[[bin]]
name = "accuracy"
path = "src/accuracy.rs"

[dependencies]
anyhow = "1.0.82"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"] }
